--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
       "backgroundColor": "#1F2430",
       "height": "740",
       "width": "920"
-    }
+    },
+    "entrypoints": [],
+    "links": [
+      "https://cdn.jsdelivr.net/",
+      "https://google.com/",
+      "https://docs.google.com/gview",
+      "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_150x54dp.png",
+      "https://www.google.com/images/errors/robot.png"
+    ]
   },
   "type": "module",
   "license": "Apache-2.0",
@@ -28,6 +36,10 @@
     "hypercore": "^10.38.1",
     "hypercore-crypto": "^3.4.2",
     "hyperswarm": "^4.8.4",
+    "jspdf": "^2.5.2",
+    "libreoffice": "^0.4.5",
+    "libreoffice-convert": "^1.6.0",
+    "pptxgenjs": "^3.12.0",
     "readline": "^1.3.0"
   }
 }
