--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "name": "peardeck",
+  "version": "1.0.9",
+  "description": "A GUI app built with HTML and JavaScript in the pear environment.",
   "main": "index.html",
+  "scripts": {
+    "start": "pear run electron",
+    "dev": "pear run live-server --no-browser --entry-file=index.html",
+    "test": "brittle test/*.test.js" 
+  },
+  "bin": {
+  "peardeck": "main.js"
+},
   "pear": {
     "name": "peardeck",
     "type": "desktop",
@@ -9,7 +19,7 @@
       "height": "740",
       "width": "920"
     },
-    "entrypoints": [],
+    "entrypoints": ["index.html"],
     "links": [
       "https://cdn.jsdelivr.net/",
       "https://google.com/",
@@ -18,21 +28,12 @@
       "https://www.google.com/images/errors/robot.png"
     ]
   },
-  "type": "module",
-  "license": "Apache-2.0",
-  "scripts": {
-    "dev": "pear run -d .",
-    "test": "brittle test/*.test.js"
-  },
-  "devDependencies": {
-    "brittle": "^3.0.0",
-    "pear-interface": "^1.0.0"
-  },
   "dependencies": {
     "b4a": "^1.6.7",
     "bare-process": "^4.0.0",
     "corestore": "^6.18.4",
     "crypto": "^1.0.1",
+    "electron": "^13.1.0",
     "hypercore": "^10.38.1",
     "hypercore-crypto": "^3.4.2",
     "hyperswarm": "^4.8.4",
@@ -41,5 +42,13 @@
     "libreoffice-convert": "^1.6.0",
     "pptxgenjs": "^3.12.0",
     "readline": "^1.3.0"
-  }
+  },
+  "devDependencies": {
+    "brittle": "^3.0.0",
+    "pear-interface": "^1.0.0",
+    "live-server": "^1.2.1"
+  },
+  "type": "module",
+  "license": "Apache-2.0",
+  "keywords": ["gui", "app", "pear", "html", "javascript", "electron"]
 }
